[package]
name = "komotray"
authors = ["Joshua Park <joshuprk@gmail.com>"]
description = "Simple and lightweight tray icon that shows the current workspace for the Komorebi window manager"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.25.2", default-features = false, features = ["ico"] }
komorebi-client = { git = "https://github.com/LGUG2Z/komorebi", tag = "v0.1.28"}
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["rt", "macros", "time"] }
tray-icon = { version = "0.14.3", default-features = false }
uds_windows = "1.1.0"
